# Bogdan-httpserv

./: .gitignore  CMakeLists.txt  LICENSE  arch_ac_domain_xml2bin.cpp  arch_ac_domain_xml2bin.h  basedefs.h  bin2text.cpp  bin2text.h  binary_streams.cpp  binary_streams.h  cmd_client.vcxproj  cmd_client.vcxproj.filters  domain_converter.cpp  domain_converter.h  entrypoint.cpp  face.cpp  face.h  hgt_optimizer.cpp  hgt_optimizer.h  model2bin.bat  point.h  radio_hf_domain_xml2bin.cpp  radio_hf_domain_xml2bin.h  text_streams.cpp  text_streams.h  xml2bin.cpp  xml2bin.h  xml_exceptions.cpp  xml_parser.cpp  xml_parser.h
